--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ script:
   - conda config --add channels ${ORGNAME} --add channels conda-forge
   # Add omnia dev channels
   - conda config --add channels https://conda.anaconda.org/omnia/label/dev
+  # Install geometric
+  - conda install --yes --use-local ${PACKAGENAME}-dev
   # Install testing dependencies
   - conda install --yes --quiet nose nose-timer
   # Test the package
