--- a/.travis.yml
+++ b/.travis.yml
@@ -28,22 +28,20 @@ before_install:
 install:
 
     # Create test environment for package
-  - conda create -n test python=$PYTHON_VER pip pytest pyyaml pytest-cov py-cpuinfo psi4 rdkit qcengine -c psi4 -c rdkit -c molssi
+  - conda create -n test python=$PYTHON_VER numpy nomkl networkx pip pytest pyyaml pytest-cov py-cpuinfo qcengine rdkit -c rdkit -c conda-forge -c molssi
   - source activate test
 
     # Install pip only modules
   - pip install codecov
 
     # Build and install package
-  - conda build --python=$PYTHON_VER devtools/conda-recipe
-  - conda install --use-local geomeTRIC
-
+  - python setup.py develop
 
 script:
-  - pytest -v --cov=geomeTRIC geomeTRIC/tests/
-  - cd examples/water2_psi4
-  - coverage run `which geometric-optimize` --psi4 water2.psi4in
-  - cd ../..
+  - pytest -v --cov=geometric geometric/tests/
+#  - cd examples/water2_psi4
+#  - coverage run `which geometric-optimize` --psi4 water2.psi4in
+#  - cd ../..
 
 notifications:
     email: false
