CI: Updates envs and canonicalizes travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,11 @@ install:
   - |
     if [ $PROG == "RDKIT" ]; then
       conda env create -n test python=$PYTHON_VER -f devtools/conda-envs/rdkit.yaml
-    else
+    elif [ $PROG == "PSI4" ]; then
       conda env create -n test python=$PYTHON_VER -f devtools/conda-envs/psi.yaml
+    else
+      echo "ERROR: No match for PROG ($PROG)."
+      exit 1
     fi
   - source activate test
 
@@ -47,6 +50,8 @@ install:
 
 script:
   - pytest -v --cov=geometric geometric/tests/
+
+    # Run a Psi4 command line test if possible
   - |
     if [ $PROG == "PSI4" ]; then
       cd examples/water2_psi4
