Ignore some deprecation warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,8 @@ versionfile_source = geometric/_version.py
 versionfile_build = geometric/_version.py
 tag_prefix = ''
 style = pep440
+
+[tool:pytest]
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
