--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ versionfile_build = geometric/_version.py
 tag_prefix = ''
 style = pep440
 
-[tool:pytest]
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
+# [tool:pytest]
+# filterwarnings =
+#     ignore::DeprecationWarning
+#     ignore::PendingDeprecationWarning
