CI: Updates builds to a pinned QCEngine version

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,17 @@ matrix:
       env:
         - PYTHON_VER=3.6
         - PROG=PSI4
+    - os: linux
+      python: 3.5
+      env:
+        - PYTHON_VER=3.5
+        - PROG=LATEST
+  allowed_failures:
+    - os: linux
+      python: 3.5
+      env:
+        - PYTHON_VER=3.5
+        - PROG=LATEST
 
 before_install:
     # Additional info about the build
@@ -39,6 +50,8 @@ install:
       conda env create -n test python=$PYTHON_VER -f devtools/conda-envs/rdkit.yaml
     elif [ $PROG == "PSI4" ]; then
       conda env create -n test python=$PYTHON_VER -f devtools/conda-envs/psi.yaml
+    elif [ $PROG == "LATEST" ]; then
+      conda env create -n test python=$PYTHON_VER -f devtools/conda-envs/latest.yaml
     else
       echo "ERROR: No match for PROG ($PROG)."
       exit 1
