--- a/devtools/conda-envs/latest.yaml
+++ b/devtools/conda-envs/latest.yaml
@@ -16,4 +16,4 @@ dependencies:
   - codecov
   - pytest-cov
   - pip:
-    - git+git://github.com/MolSSI/QCEngine@v0.4.0#egg=qcengine
+    - git+git://github.com/MolSSI/QCEngine#egg=qcengine
