--- a/devtools/conda-envs/rdkit.yaml
+++ b/devtools/conda-envs/rdkit.yaml
@@ -6,7 +6,6 @@ channels:
 dependencies:
     # RDKit test depends
   - rdkit
-  - qcengine
 
     # geomeTRIC base depends
   - numpy
@@ -16,3 +15,5 @@ dependencies:
   - pytest
   - codecov
   - pytest-cov
+  - pip:
+    - git+git://github.com/MolSSI/QCEngine@v0.4.0#egg=qcengine
