--- a/devtools/conda-envs/latest.yaml
+++ b/devtools/conda-envs/latest.yaml
@@ -2,10 +2,10 @@ name: test
 channels:
   - conda-forge
   - psi4
-  - molssi
 dependencies:
     # Psi test depends
   - psi4
+  - qcengine
 
     # geomeTRIC base depends
   - numpy
@@ -15,5 +15,3 @@ dependencies:
   - pytest
   - codecov
   - pytest-cov
-  - pip:
-    - git+git://github.com/MolSSI/QCEngine#egg=qcengine
