--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
     if [ $PROG == "RDKIT" ]; then
       python devtools/scripts/create_conda_env.py -n=test -p=$PYTHON_VER devtools/conda-envs/rdkit.yaml
     elif [ $PROG == "PSI4" ]; then
-      python devtools/scripts/create_conda_env.py -n=test -p=$PYTHON_VER devtools/conda-envs/psi4.yaml
+      python devtools/scripts/create_conda_env.py -n=test -p=$PYTHON_VER devtools/conda-envs/psi.yaml
     elif [ $PROG == "OPENMM" ]; then
       python devtools/scripts/create_conda_env.py -n=test -p=$PYTHON_VER devtools/conda-envs/openmm.yaml
     else
