log to logfile on top of stderr

--- a/geometric/log.ini
+++ b/geometric/log.ini
@@ -2,20 +2,26 @@
 keys=root
 
 [handlers]
-keys=stream_handler
+keys=stream_handler, file_handler
 
 [formatters]
 keys=formatter
 
 [logger_root]
-level=DEBUG
-handlers=stream_handler
+level=INFO
+handlers=stream_handler, file_handler
 
 [handler_stream_handler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=formatter
 args=(sys.stderr,)
+
+[handler_file_handler]
+class=FileHandler
+level=INFO
+formatter=formatter
+args=('%(logfilename)s',)
 
 [formatter_formatter]
 format=%(message)s
