--- a/devtools/conda-envs/psi.yaml
+++ b/devtools/conda-envs/psi.yaml
@@ -7,7 +7,7 @@ channels:
 dependencies:
     # Psi test depends
   - psi4
-  - qcengine
+  - qcengine >=0.6*
 
     # OpenMM test depends
   - openmm
