--- a/geometric/logJson.ini
+++ b/geometric/logJson.ini
@@ -2,26 +2,20 @@
 keys=root
 
 [handlers]
-keys=stream_handler, file_handler
+keys=stream_handler
 
 [formatters]
 keys=formatter
 
 [logger_root]
 level=INFO
-handlers=stream_handler, file_handler
+handlers=stream_handler
 
 [handler_stream_handler]
 class=geometric.nifty.RawStreamHandler
 level=INFO
 formatter=formatter
 args=(sys.stderr,)
-
-[handler_file_handler]
-class=geometric.nifty.RawFileHandler
-level=INFO
-formatter=formatter
-args=('%(logfilename)s',)
 
 [formatter_formatter]
 format=%(message)s
