Remove duplicate logging info for JSON API

--- a/geometric/logJson.ini
+++ b/geometric/logJson.ini
@@ -9,7 +9,7 @@ keys=formatter
 
 [logger_root]
 level=INFO
-handlers=stream_handler
+handlers=
 
 [handler_stream_handler]
 class=geometric.nifty.RawStreamHandler
