--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ script:
   - |
     if [ $PROG == "PSI4" ]; then
       cd examples/water2_psi4
-      coverage run `which geometric-optimize` --psi4 water2.psi4in
+      coverage run `which geometric-optimize` --engine psi4 water2.psi4in
       cd ../..
     fi
 
