--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,19 @@ matrix:
       dist: trusty
       env:
         - PYTHON_VER=3.6
-        - PROG=PSI4
+        - PROG=OPENMM
     - os: linux
       python: 3.7
       dist: xenial
       env:
         - PYTHON_VER=3.7
         - PROG=RDKIT
+    - os: linux
+      python: 3.7
+      dist: xenial
+      env:
+        - PYTHON_VER=3.7
+        - PROG=PSI4
 
 before_install:
     # Additional info about the build
