--- a/devtools/conda-envs/psi.yaml
+++ b/devtools/conda-envs/psi.yaml
@@ -6,8 +6,8 @@ channels:
   - conda-forge
 dependencies:
     # Psi test depends
-  - psi4
-  - qcengine
+  - psi4 >= 1.3
+  - qcengine >= 0.13
 
     # OpenMM test depends
   - openmm
