--- a/devtools/conda-envs/psi_rdkit.yaml
+++ b/devtools/conda-envs/psi_rdkit.yaml
@@ -3,8 +3,11 @@ channels:
   - defaults
   - psi4
   - omnia
+  - rdkit
   - conda-forge
 dependencies:
+    # RDKit test depends
+  - rdkit
     # Psi test depends
   - psi4 >= 1.3
   - qcengine >= 0.15
