--- a/devtools/conda-envs/latest.yaml
+++ b/devtools/conda-envs/latest.yaml
@@ -2,11 +2,18 @@ name: test
 channels:
   - defaults
   - psi4
+  - omnia
+  - rdkit
   - conda-forge
 dependencies:
+    # RDKit test depends
+  - rdkit
     # Psi test depends
-  - psi4
-  - qcengine >= 0.6.*
+  - psi4 >= 1.3
+  - qcengine >= 0.15
+
+    # OpenMM test depends
+  - openmm
 
     # geomeTRIC base depends
   - numpy
