Ignore multiangle and multidihedral class in coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,5 +3,7 @@ exclude_lines =
     pragma: no cover
     if "forcebalance" in __name__
     except ImportError
+    logger.warning
     logger.error
+    logger.info
     raise RuntimeError
