--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,5 @@
+# Lines inside codes to exclude from coverage.
 [report]
-omit =
-    geometric/_version.py
 exclude_lines =
     pragma: no cover
     if "forcebalance" in __name__
