fixup! CI: github actions initial settings

--- a/.github/workflows/conda-tests.yml
+++ b/.github/workflows/conda-tests.yml
@@ -35,7 +35,7 @@ jobs:
                         numpy networkx \
                         ase \
                         # Testing
-                        pytest codecov pytest-cov \
+                        pytest codecov pytest-cov
 
           # Build and install package
           python setup.py develop --no-deps
