Energy weighted NEB is available. TS optimization can be carried with QCAI setting by adding TS- in front of method. i.e. TS-b3lyp.

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,7 @@ style = pep440
 #filterwarnings =
 #    ignore::DeprecationWarning
 #    ignore::PendingDeprecationWarning
+
+#[install]
+#single-version-externally-managed=1
+#record=installed_files.txt
