NEB examples are updated

--- a/examples/neb_psi4/psi4.in
+++ b/examples/neb_psi4/psi4.in
@@ -8,5 +8,5 @@ C      0.4068909425   1.6172446306   1.5286738889
 N      0.6215308973   2.4516801195   2.3310909123
 }
 
-set basis 6-31g
+set basis 6-31g(d)
 gradient('b3lyp')
