Apply some fixes for windows

--- a/geometric/config/log.ini
+++ b/geometric/config/log.ini
@@ -28,7 +28,7 @@ args=(sys.stderr,)
 class=geometric.nifty.RawFileHandler
 level=INFO
 formatter=formatter
-args=('%(logfilename)s',)
+args=(r'%(logfilename)s',)
 
 [formatter_formatter]
 format=%(message)s
