Improve coverage of nifty and improve some file/folder operation functions

--- a/.coveragerc
+++ b/.coveragerc
@@ -16,6 +16,6 @@ exclude_lines =
     verbose:
     if verbose >=
     if params.verbose >=
-    HaveGZ
-    HaveBZ2
+    lp_dump
+    lp_load
     main()
