Configure tests to capture logs properly (without extra newline).

--- a/geometric/config/log.ini
+++ b/geometric/config/log.ini
@@ -1,3 +1,10 @@
+# The default logging configuration file for geomeTRIC.
+# The goal is to write identical output to '<prefix>.log'
+# and stdout when running geometric-optimize on the command line.
+# 
+# The RawStreamHandler and RawFileHandler are subclasses of StreamHandler and FileHandler
+# where the terminator character has been set to "" rather than "\n".
+
 [loggers]
 keys=root
 
