--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       python-version: "3.8"
+      CACHE_NUMBER: 0 # increase to reset cache
 
     steps:
       - uses: actions/checkout@v3
@@ -23,7 +24,21 @@ jobs:
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           echo $CONDA/bin >> $GITHUB_PATH
 
+      # sets up caching for the conda env - speeding up build
+      # - Only need to actually download and install when version changes
+      # or periodically when caches are invalidated.
+      # - If there is some problem, you can change the CACHE_NUMBER above
+      # to trigger rebuilding manually
+      - name: Cache Conda env
+        id: cache-conda
+        uses: actions/cache@v3
+        with:
+          path: $CONDA/envs
+          key: ${{ runner.os }}-conda-${{ hashFiles('devtools/conda-envs/latest.yaml') }}-${{ env.CACHE_NUMBER }}
+
+      # Only happens if we cannot restore from cache
       - name: Install Dependencies from Conda
+        if: steps.cache-conda.outputs.cache-hit != 'true'
         run: conda env update --file=devtools/conda-envs/latest.yaml --name=base
 
       - name: Install geomeTRIC
