--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -33,7 +33,7 @@ jobs:
         id: cache-conda
         uses: actions/cache@v3
         with:
-          path: $CONDA/envs
+          path: $CONDA/lib
           key: ${{ runner.os }}-conda-${{ hashFiles('devtools/conda-envs/latest.yaml') }}-${{ env.CACHE_NUMBER }}
 
       # Only happens if we cannot restore from cache
