--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       python-version: "3.8"
-      CACHE_NUMBER: 0 # increase to reset cache
+      CACHE_NUMBER: 1 # increase to reset cache
 
     steps:
       - uses: actions/checkout@v3
@@ -33,7 +33,9 @@ jobs:
         id: cache-conda
         uses: actions/cache@v3
         with:
-          path: $CONDA/lib
+          # apparently the $CONDA does not work for some reason, at the point of
+          # actually saving the cache the path is not found
+          path: /usr/share/miniconda
           key: ${{ runner.os }}-conda-${{ hashFiles('devtools/conda-envs/latest.yaml') }}-${{ env.CACHE_NUMBER }}
 
       # Only happens if we cannot restore from cache
