Remove codecov upload in test-pip.yml

--- a/.github/workflows/test-pip.yml
+++ b/.github/workflows/test-pip.yml
@@ -35,9 +35,9 @@ jobs:
         run: |
           pytest -v --cov=geometric  geometric/tests/
 
-      - name: Codecov upload
-        uses: codecov/codecov-action@v1
-        with:
-          flags: unittests-pip
-          fail_ci_if_error: true
-          verbose: true
+      # - name: Codecov upload
+      #   uses: codecov/codecov-action@v1
+      #   with:
+      #     flags: unittests-pip
+      #     fail_ci_if_error: true
+      #     verbose: true
