--- a/.github/workflows/test-pip.yml
+++ b/.github/workflows/test-pip.yml
@@ -23,7 +23,7 @@ jobs:
       # most of the dependencies
       - name: Install dependencies with PIP
         run: |
-          pip install numpy networkx six pytest pytest-cov
+          pip install numpy networkx six pytest pytest-cov ase
 
       # rdkit: PyPi only supplies it for 3.7 and above
       - name: Install rdkit
