--- a/devtools/conda-envs/latest.yaml
+++ b/devtools/conda-envs/latest.yaml
@@ -6,20 +6,22 @@ channels:
   - rdkit
   - conda-forge
 dependencies:
-    # RDKit test depends
+  # ASE tests
+  - ase
+  # RDKit test depends
   - rdkit
-    # Psi test depends
+  # Psi test depends
   - psi4 >= 1.3
   - qcengine >= 0.15
 
-    # OpenMM test depends
+  # OpenMM test depends
   - openmm
 
-    # geomeTRIC base depends
+  # geomeTRIC base depends
   - numpy
   - networkx
 
-    # Testing
+  # Testing
   - pytest
   - codecov
   - pytest-cov
