--- a/devtools/conda-envs/latest.yaml
+++ b/devtools/conda-envs/latest.yaml
@@ -1,18 +1,20 @@
 name: test
 channels:
-  - defaults
   - psi4
-  - omnia
   - rdkit
   - conda-forge
+  - defaults
 dependencies:
   # ASE tests
   - ase
+  - xtb-python
+
   # RDKit test depends
   - rdkit
+
   # Psi test depends
-  - psi4 >= 1.3
-  - qcengine >= 0.15
+  - psi4 >= 1.6.1
+  - qcengine >= 0.24
 
   # OpenMM test depends
   - openmm
