--- a/.github/workflows/test-pip.yml
+++ b/.github/workflows/test-pip.yml
@@ -3,7 +3,14 @@
 
 name: Tests with Pip
 
-on: [ push ]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ master ]
+  schedule:
+    - cron: '36 21 * * 6'
 
 jobs:
   build-linux:
