--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -24,8 +24,8 @@ jobs:
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           echo $CONDA/bin >> $GITHUB_PATH
 
-      - name: Configure Conda
-        run: conda config --set channel_priority flexible
+      # - name: Configure Conda
+      #   run: conda config --set channel_priority flexible
 
       - name: Install Dependencies from Conda
         run: conda env update --file=devtools/conda-envs/latest.yaml --name=base
