--- a/devtools/conda-envs/latest.yaml
+++ b/devtools/conda-envs/latest.yaml
@@ -21,7 +21,8 @@ dependencies:
   - qcengine>=0.24
 
   # OpenMM test depends
-  - openmm
+  # LPW 2023-02-19: Using OpenMM 8 causes GLIBCXX_3.4.30 not found error to be thrown during CI tests
+  - openmm<=7.7.0
 
   # geomeTRIC base depends
   - numpy
