--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -26,9 +26,11 @@ jobs:
 
       # - name: Configure Conda
       #   run: conda config --set channel_priority flexible
-
-      - name: Install Dependencies from Conda
-        run: conda env update --file=devtools/conda-envs/latest.yaml --name=base
+      - name: Install Mamba
+        run: conda install -c conda-forge mamba
+        
+      - name: Install Dependencies
+        run: mamba env update --file=devtools/conda-envs/latest.yaml --name=base
 
       - name: pytest
         run: pytest -v --cov=geometric  geometric/tests/
