--- a/.coveragerc
+++ b/.coveragerc
@@ -16,6 +16,9 @@ exclude_lines =
     raise NotImplementedError
     raise RuntimeError
     raise .*EngineError
+    raise NEBChainRespaceError
+    raise NEBStructureError
+    raise NEBBandGradientError
     def visualize
     verbose:
     if verbose >=
