--- a/.coveragerc
+++ b/.coveragerc
@@ -19,6 +19,7 @@ exclude_lines =
     raise NEBChainRespaceError
     raise NEBStructureError
     raise NEBBandGradientError
+    raise IRCError
     def visualize
     verbose:
     if verbose >=
