--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -53,6 +53,11 @@ jobs:
       # - name: Install Dependencies
       #   run: mamba env update --file=devtools/conda-envs/latest.yaml --name=base
 
+      - name: Install package
+        run: |
+          python -m pip install --no-deps .
+          python -c "import geometric; print(geometric.__version__)"
+
       - name: pytest
         run: pytest -v --cov=geometric  geometric/tests/
 
