--- a/.github/workflows/test-pip.yml
+++ b/.github/workflows/test-pip.yml
@@ -30,7 +30,7 @@ jobs:
       # most of the dependencies
       - name: Install dependencies with PIP
         run: |
-          pip install packaging numpy networkx six pytest pytest-cov ase
+          pip install numpy networkx six pytest pytest-cov ase
 
       # rdkit: PyPi only supplies it for 3.7-3.11
       - name: Install rdkit
