Fixes for Python 3.12 (#174)
* Hacky fixes to versioneer for python 3.12

* Add python 3.11 and 3.12 to GHA tests

* Deprecate distutils and add test

* Change python version detectino to < 3.8

* rdkit is not 3.12 compatible yet

* Remove dependence on pkg_resources

* Remove need for packaging/parse_version

* Some test fixes

--- a/.github/workflows/test-pip.yml
+++ b/.github/workflows/test-pip.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.7", "3.8", "3.9", "3.10" ]
+        python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12" ]
 
     steps:
       - uses: actions/checkout@v3
@@ -32,9 +32,9 @@ jobs:
         run: |
           pip install numpy networkx six pytest pytest-cov ase
 
-      # rdkit: PyPi only supplies it for 3.7 and above
+      # rdkit: PyPi only supplies it for 3.7-3.11
       - name: Install rdkit
-        if: matrix.python-version != '3.6'
+        if: matrix.python-version != '3.12'
         run: |
           pip install rdkit
 
